[package]
name = "cartographer"
version = "0.1.0"
description = "A command-line tool for generating and saving Minecraft seeds"
authors = ["lnxwizard <lnxwizardreal@gmail.com>"]
edition = "2021"
license = "GPL-3"
repository = "https://github.com/lnxwizard/cartographer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
rand = "0.8.5"
